src/main/css/bdrs/bdrs.css
/* ... */
#searchNavBar ul,#searchNavBar ul li {
    display:inline;
    list-style:none;
}

.facetOptions {
    padding-bottom: 2em;
}
.facetOptions div {
	padding-left: 5px;
}

.facetOptions .showMore,
.facetOptions .showLess {
    text-align: right;
}
.facetOptions .showMore a,
.facetOptions .showLess a {
    padding-right: 1em;
}

/************************************/
/* Drag Row Styling                 */
/************************************/
.drag_row {
    background-color: #75A1AE;
}

.drag_handle:hover {
    background-image: url(../../images/vanilla/updown.gif);
    background-repeat: no-repeat;
    background-position: center;
}

/************************************/
/* Data Table Styling               */
/************************************/
table.datatable {
    width: 100%;
    border-collapse: collapse;
}

.datatable input.fillwidth {
    width: 100%;
    padding: 0;
}

/************************************/
/* Form Table Styling               */
/************************************/
table.form_table {
   /* instead of 100% width table, make the table auto center 
    * this gives our forms a more consistent look rather than letting
    * browsers choose how much to pad each column by to reach the 100% target 
    * */
    margin: 0px auto;
}

.form_table tbody th {
    text-align: right;
}

.form_table th,
.form_table td {
    vertical-align: top;
}


table.form_table tbody tr th {
    min-width: 150px;
	white-space: nowrap;
}

table.form_table tbody tr td {
	max-width: 300px;
}

/* set the min with for the tracker form table to keep the hidden species input to 
   the right of the species input for the ketchup popups */
table.tracker_form_table tbody tr td,
table.taxon_edit_form_table tbody tr td {
	/*min-width: 155px;*/
}

.form_table textarea {
    height: 7em;
    width: 20em;
}

/*************************/
/* Attribute Input Table */
/*************************/
.attribute_input_table tbody td {
    vertical-align: middle;
    margin: 0;
    padding: 0.2em 0.5em 0.2em 0.5em;
}

.attribute_input_table tbody td.drag_handle {
    text-align: center;
    width: 18px;
    padding:0;
}

.attribute_input_table tbody td input[type=text],
.attribute_input_table tbody td select {
    width: 95%;
    word-wrap: normal;
}

#attribute_input_table tbody td,
#attribute_input_table tbody th {
    max-width: 120px;
    word-wrap: normal;
}

#editAttributesAttributeContainer #attribute_input_table td,
#editAttributesAttributeContainer #attribute_input_table th {
    max-width: 100px;
}

.deleteRow {
    background-color: #F96B6A;
}

/************************************/
/* Form Fieldset Styling            */
/************************************/

legend {
	margin: 5px;
	padding: 5px;
}

/************************************/
/* Plus Minus Styling               */
/************************************/

.plusminus {
    width: 16px;
    height: 16px;
    background-image: url(../../images/icons/plusminus.png);
    background-position: left;
    display: block;
    margin: auto;
}

.plusminus_plus {
    background-position: left;
}

.plusminus_minus {
    background-position: right;
}


/************************************/
/* Generic Styling                  */
/************************************/
.hidden {
	display: none;
	visibility: hidden;
}

.invisible {
	visibility: hidden;
}

.left {
    float: left;
}

.right {
    float: right;
}

.clear {
    clear:both;
}

.textleft {
    text-align: left;
}

.textright {
    text-align: right;
}

.textcenter {
   text-align: center;
}

.textjustify {
	text-align: justify;
}

.verttop {
    vertical-align: top;
}

.vertmiddle {
    vertical-align: middle;
}

.plaintext {
    font-weight: normal;
}

.italics {
    font-style: italic;
}

.strong {
    font-weight: bold;
}

.fillwidth {
    width: 100%;
}

.nowrap {
    white-space: nowrap;
}

.noborder {
    border-top-width: 0px;
    border-right-width: 0px;
    border-bottom-width: 0px;
    border-left-width: 0px;
}

.scientificName {
    font-style: italic;
	white-space: nowrap;
}

.error{
	color: red;
}

.success {
	color: green;
}

.nohighlight:focus { 
    outline:none; 
}

.hr {
   border-width: 1px 0px 0px 0px;
   border-color: #CCCCCC;
   border-style: solid;
   margin: 1em 0;
}

@media only screen and (max-device-width: 480px) {
    .rollover * img.rolloff {
        display:inline;
    }

    /*.rollover *:hover img.rolloff {
        display:none;
    }*/

    .rollover * img.rollon {
        display:none;
    }

    /*.rollover *:hover img.rollon {
        display:inline;
    }*/
}

@media only screen and (max-device-width: 768px) {
    .rollover * img.rolloff {
        display:inline;
    }

    /*.rollover *:hover img.rolloff {
        display:none;
    }*/

    .rollover * img.rollon {
        display:none;
    }

    /*.rollover *:hover img.rollon {
        display:inline;
    }*/
}

@media only screen and (min-device-width: 769px) {
    .rollover * img.rolloff {
        display:inline;
    }

    .rollover *:hover img.rolloff {
        display:none;
    }

    .rollover * img.rollon {
        display:none;
    }

    .rollover *:hover img.rollon {
        display:inline;
    }
}

.buttonpanel {
    padding: 0.5em 0em 0.5em 0em;
}

/* used when you want the buttons to appear to the right of a form.
 */
.buttonPanelRight{
	/* Using negative margin here because having a float:right element inside a 
	 * jquery-ui dialog will cause the dialog to blow up to 100% screen width
	 * in IE7. Using a negative margin like this allows us to bump up the 
	 * button panel without taking it out of normal document flow.
	 * 
	 * Yes, i know it's a hack.
	 */
	margin-top:-47px;
}

.widgetSearchForm {
	padding: 0 0 1em 0;
}

.max_size_img {
    max-width: 250px;
    max-height: 140px;
    
    -webkit-box-shadow: 2px 2px 2px #DCDCDC;
    -moz-box-shadow: 2px 2px 2px #DCDCDC;
    box-shadow: 2px 2px 2px #DCDCDC;
}
/* ... */

